[gd_scene load_steps=4 format=3 uid="uid://cwhpiynu322rk"]

[ext_resource type="Script" path="res://current/menus/escape_menu/escape_menu.gd" id="1_n3t1d"]
[ext_resource type="Script" path="res://current/scripts/node/button.gd" id="2_jovmg"]
[ext_resource type="Texture2D" uid="uid://dv4n5etipadpk" path="res://current/assets/ui/btn_sized.png" id="2_t8lwk"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3t1d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 320.0
offset_top = 64.0
offset_right = 1600.0
offset_bottom = 1024.0
color = Color(0, 0, 0, 0.643137)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 136.0
offset_right = 1536.0
offset_bottom = 968.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Multiplayer" type="Button" parent="ScrollContainer/VBoxContainer"]
modulate = Color(2.69532e-06, 0.564525, 0.877788, 1)
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
text = "Multiplayer"
icon = ExtResource("2_t8lwk")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_jovmg")

[node name="Accessibility" type="Button" parent="ScrollContainer/VBoxContainer"]
modulate = Color(0.78146, 0.476793, 9.62615e-07, 1)
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
text = "Accessibility"
icon = ExtResource("2_t8lwk")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_jovmg")

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
modulate = Color(0.87773, 0.748847, 0, 1)
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
text = "Video"
icon = ExtResource("2_t8lwk")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_jovmg")

[node name="Save" type="Button" parent="ScrollContainer/VBoxContainer"]
modulate = Color(6.06447e-06, 0.785401, 0.594757, 1)
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
text = "Save"
icon = ExtResource("2_t8lwk")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_jovmg")

[node name="Debug" type="Button" parent="ScrollContainer/VBoxContainer"]
modulate = Color(0.762964, 0.552664, 1, 1)
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
text = "Debug"
icon = ExtResource("2_t8lwk")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_jovmg")

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Accessibility" to="." method="_on_accessibility_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Button" to="." method="_on_video_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Debug" to="." method="_on_debug_pressed"]
